Lab/Code/syntax.output
State 1 conflicts: 2 reduce/reduce
State 3 conflicts: 1 shift/reduce
State 6 conflicts: 1 shift/reduce
State 9 conflicts: 1 reduce/reduce
State 10 conflicts: 1 reduce/reduce
State 14 conflicts: 3 reduce/reduce
State 16 conflicts: 2 reduce/reduce
State 17 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 21 conflicts: 4 shift/reduce
State 23 conflicts: 1 shift/reduce
State 24 conflicts: 1 reduce/reduce
State 28 conflicts: 1 shift/reduce
State 31 conflicts: 1 reduce/reduce
State 32 conflicts: 3 shift/reduce
State 35 conflicts: 13 shift/reduce, 1 reduce/reduce
State 36 conflicts: 3 shift/reduce
State 40 conflicts: 1 shift/reduce, 2 reduce/reduce
State 44 conflicts: 1 shift/reduce
State 47 conflicts: 2 reduce/reduce
State 48 conflicts: 1 shift/reduce
State 53 conflicts: 13 shift/reduce, 2 reduce/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 58 conflicts: 3 reduce/reduce
State 70 conflicts: 13 shift/reduce, 2 reduce/reduce
State 78 conflicts: 1 shift/reduce
State 96 conflicts: 15 reduce/reduce
State 98 conflicts: 15 reduce/reduce
State 100 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce, 2 reduce/reduce
State 122 conflicts: 2 reduce/reduce
State 130 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 145 conflicts: 15 reduce/reduce
State 147 conflicts: 15 reduce/reduce
State 149 conflicts: 15 reduce/reduce
State 151 conflicts: 15 reduce/reduce
State 153 conflicts: 15 reduce/reduce
State 155 conflicts: 15 reduce/reduce
State 157 conflicts: 15 reduce/reduce
State 159 conflicts: 15 reduce/reduce
State 162 conflicts: 1 shift/reduce
State 167 conflicts: 13 shift/reduce
State 168 conflicts: 13 shift/reduce
State 169 conflicts: 13 shift/reduce
State 170 conflicts: 13 shift/reduce
State 171 conflicts: 13 shift/reduce
State 172 conflicts: 13 shift/reduce
State 173 conflicts: 13 shift/reduce
State 174 conflicts: 13 shift/reduce
State 186 conflicts: 13 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | error

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty
    5           | error

    6 ExtDef: Specifier ExtDecList SEMI
    7       | Specifier SEMI
    8       | Specifier FunDec CompSt
    9       | Specifier ExtDecList error
   10       | error

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList
   13           | VarDec error ExtDefList
   14           | error

   15 Specifier: TYPE
   16          | StructSpecifier
   17          | error

   18 StructSpecifier: STRUCT OptTag LC DefList RC
   19                | STRUCT Tag
   20                | STRUCT OptTag LC DefList error
   21                | STRUCT OptTag error DefList RC

   22 OptTag: ID
   23       | %empty
   24       | error

   25 Tag: ID
   26    | error

   27 VarDec: ID
   28       | VarDec LB INT RB
   29       | ID error
   30       | VarDec LB error RB
   31       | VarDec LB INT error
   32       | VarDec error INT
   33       | error

   34 FunDec: ID LP VarList RP
   35       | ID LP RP
   36       | ID LP VarList error
   37       | ID LP error RP
   38       | ID error
   39       | error

   40 VarList: ParamDec COMMA VarList
   41        | ParamDec
   42        | ParamDec error VarList
   43        | error

   44 ParamDec: Specifier VarDec
   45         | error

   46 CompSt: LC DefList StmtList RC
   47       | LC DefList StmtList error
   48       | LC error RC
   49       | DefList StmtList RC
   50       | error

   51 StmtList: Stmt StmtList
   52         | %empty

   53 Stmt: Exp SEMI
   54     | CompSt
   55     | RETURN Exp SEMI
   56     | IF LP Exp RP Stmt
   57     | IF LP Exp RP Stmt ELSE Stmt
   58     | WHILE LP Exp RP Stmt
   59     | Exp error
   60     | RETURN Exp error
   61     | RETURN error SEMI
   62     | RETURN error
   63     | IF LP Exp error Stmt
   64     | IF LP error RP Stmt
   65     | IF error Exp RP Stmt
   66     | WHILE LP Exp error Stmt
   67     | WHILE LP error RP Stmt
   68     | WHILE error Exp RP Stmt

   69 DefList: Def DefList
   70        | %empty

   71 Def: Specifier DecList SEMI
   72    | Specifier error SEMI
   73    | Specifier DecList error

   74 DecList: Dec
   75        | Dec COMMA DecList

   76 Dec: VarDec
   77    | VarDec ASSIGNOP Exp

   78 Exp: Exp ASSIGNOP Exp
   79    | Exp AND Exp
   80    | Exp OR Exp
   81    | Exp RELOP Exp
   82    | Exp PLUS Exp
   83    | Exp MINUS Exp
   84    | Exp STAR Exp
   85    | Exp DIV Exp
   86    | LP Exp RP
   87    | MINUS Exp
   88    | NOT Exp
   89    | ID LP Args RP
   90    | ID LP RP
   91    | Exp LB Exp RB
   92    | Exp DOT ID
   93    | ID
   94    | INT
   95    | FLOAT
   96    | Exp ASSIGNOP error
   97    | Exp AND error
   98    | Exp OR error
   99    | Exp RELOP error
  100    | Exp PLUS error
  101    | Exp MINUS error
  102    | Exp STAR error
  103    | Exp DIV error
  104    | LP error RP
  105    | MINUS error
  106    | NOT error
  107    | ID LP error RP
  108    | Exp LB error RB
  109    | error

  110 Args: Exp COMMA Args
  111     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 2 5 9 10 13 14 17 20 21 24 26 29 30 31 32 33 36 37 38 39
    42 43 45 47 48 50 59 60 61 62 63 64 65 66 67 68 72 73 96 97 98
    99 100 101 102 103 104 105 106 107 108 109
INT (258) 28 31 32 94
FLOAT (259) 95
ID (260) 22 25 27 29 34 35 36 37 38 89 90 92 93 107
SEMI (261) 6 7 53 55 61 71 72
COMMA (262) 12 40 75 110
ASSIGNOP (263) 77 78 96
RELOP (264) 81 99
PLUS (265) 82 100
MINUS (266) 83 87 101 105
STAR (267) 84 102
DIV (268) 85 103
AND (269) 79 97
OR (270) 80 98
DOT (271) 92
NOT (272) 88 106
TYPE (273) 15
LP (274) 34 35 36 37 56 57 58 63 64 66 67 86 89 90 104 107
RP (275) 34 35 37 56 57 58 64 65 67 68 86 89 90 104 107
LB (276) 28 30 31 91 108
RB (277) 28 30 91 108
LC (278) 18 20 46 47 48
RC (279) 18 21 46 48 49
STRUCT (280) 18 19 20 21
RETURN (281) 55 60 61 62
IF (282) 56 57 63 64 65
ELSE (283) 57
WHILE (284) 58 66 67 68
NEG (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1 2, on right: 0
ExtDefList (34)
    on left: 3 4 5, on right: 1 3 13
ExtDef (35)
    on left: 6 7 8 9 10, on right: 3
ExtDecList (36)
    on left: 11 12 13 14, on right: 6 9 12
Specifier (37)
    on left: 15 16 17, on right: 6 7 8 9 44 71 72 73
StructSpecifier (38)
    on left: 18 19 20 21, on right: 16
OptTag (39)
    on left: 22 23 24, on right: 18 20 21
Tag (40)
    on left: 25 26, on right: 19
VarDec (41)
    on left: 27 28 29 30 31 32 33, on right: 11 12 13 28 30 31 32 44
    76 77
FunDec (42)
    on left: 34 35 36 37 38 39, on right: 8
VarList (43)
    on left: 40 41 42 43, on right: 34 36 40 42
ParamDec (44)
    on left: 44 45, on right: 40 41 42
CompSt (45)
    on left: 46 47 48 49 50, on right: 8 54
StmtList (46)
    on left: 51 52, on right: 46 47 49 51
Stmt (47)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68, on right:
    51 56 57 58 63 64 65 66 67 68
DefList (48)
    on left: 69 70, on right: 18 20 21 46 47 49 69
Def (49)
    on left: 71 72 73, on right: 69
DecList (50)
    on left: 74 75, on right: 71 73 75
Dec (51)
    on left: 76 77, on right: 74 75
Exp (52)
    on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 99 100 101 102 103 104 105 106 107 108 109, on right:
    53 55 56 57 58 59 60 63 65 66 68 77 78 79 80 81 82 83 84 85 86
    87 88 91 92 96 97 98 99 100 101 102 103 108 110 111
Args (53)
    on left: 110 111, on right: 89 110


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    2 Program: error .
    5 ExtDefList: error .
   10 ExtDef: error .
   17 Specifier: error .

    $end      reduce using rule 2 (Program)
    $end      [reduce using rule 5 (ExtDefList)]
    $end      [reduce using rule 10 (ExtDef)]
    error     reduce using rule 10 (ExtDef)
    error     [reduce using rule 17 (Specifier)]
    ID        reduce using rule 17 (Specifier)
    SEMI      reduce using rule 17 (Specifier)
    $default  reduce using rule 10 (ExtDef)


State 2

   15 Specifier: TYPE .

    $default  reduce using rule 15 (Specifier)


State 3

   18 StructSpecifier: STRUCT . OptTag LC DefList RC
   19                | STRUCT . Tag
   20                | STRUCT . OptTag LC DefList error
   21                | STRUCT . OptTag error DefList RC

    error  shift, and go to state 9
    ID     shift, and go to state 10

    error  [reduce using rule 23 (OptTag)]
    LC     reduce using rule 23 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 14
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end   reduce using rule 4 (ExtDefList)
    error  [reduce using rule 4 (ExtDefList)]
    SEMI   reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    6 ExtDef: Specifier . ExtDecList SEMI
    7       | Specifier . SEMI
    8       | Specifier . FunDec CompSt
    9       | Specifier . ExtDecList error

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   16 Specifier: StructSpecifier .

    $default  reduce using rule 16 (Specifier)


State 9

   24 OptTag: error .
   26 Tag: error .

    error     reduce using rule 24 (OptTag)
    error     [reduce using rule 26 (Tag)]
    ID        reduce using rule 26 (Tag)
    SEMI      reduce using rule 26 (Tag)
    $default  reduce using rule 24 (OptTag)


State 10

   22 OptTag: ID .
   25 Tag: ID .

    error     reduce using rule 22 (OptTag)
    error     [reduce using rule 25 (Tag)]
    ID        reduce using rule 25 (Tag)
    SEMI      reduce using rule 25 (Tag)
    $default  reduce using rule 22 (OptTag)


State 11

   18 StructSpecifier: STRUCT OptTag . LC DefList RC
   20                | STRUCT OptTag . LC DefList error
   21                | STRUCT OptTag . error DefList RC

    error  shift, and go to state 22
    LC     shift, and go to state 23


State 12

   19 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 19 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    5 ExtDefList: error .
   10 ExtDef: error .
   17 Specifier: error .

    $end      reduce using rule 5 (ExtDefList)
    $end      [reduce using rule 10 (ExtDef)]
    error     reduce using rule 5 (ExtDefList)
    error     [reduce using rule 10 (ExtDef)]
    error     [reduce using rule 17 (Specifier)]
    ID        reduce using rule 17 (Specifier)
    SEMI      reduce using rule 5 (ExtDefList)
    SEMI      [reduce using rule 10 (ExtDef)]
    SEMI      [reduce using rule 17 (Specifier)]
    TYPE      reduce using rule 10 (ExtDef)
    STRUCT    reduce using rule 10 (ExtDef)
    $default  reduce using rule 5 (ExtDefList)


State 15

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 16

   14 ExtDecList: error .
   33 VarDec: error .
   39 FunDec: error .

    error     reduce using rule 14 (ExtDecList)
    error     [reduce using rule 33 (VarDec)]
    error     [reduce using rule 39 (FunDec)]
    SEMI      reduce using rule 14 (ExtDecList)
    SEMI      [reduce using rule 33 (VarDec)]
    COMMA     reduce using rule 33 (VarDec)
    LB        reduce using rule 33 (VarDec)
    $default  reduce using rule 39 (FunDec)


State 17

   27 VarDec: ID .
   29       | ID . error
   34 FunDec: ID . LP VarList RP
   35       | ID . LP RP
   36       | ID . LP VarList error
   37       | ID . LP error RP
   38       | ID . error

    error  shift, and go to state 24
    LP     shift, and go to state 25

    error  [reduce using rule 27 (VarDec)]
    SEMI   reduce using rule 27 (VarDec)
    COMMA  reduce using rule 27 (VarDec)
    LB     reduce using rule 27 (VarDec)


State 18

    7 ExtDef: Specifier SEMI .

    $default  reduce using rule 7 (ExtDef)


State 19

    6 ExtDef: Specifier ExtDecList . SEMI
    9       | Specifier ExtDecList . error

    error  shift, and go to state 26
    SEMI   shift, and go to state 27


State 20

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   13           | VarDec . error ExtDefList
   28 VarDec: VarDec . LB INT RB
   30       | VarDec . LB error RB
   31       | VarDec . LB INT error
   32       | VarDec . error INT

    error  shift, and go to state 28
    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    error  [reduce using rule 11 (ExtDecList)]
    SEMI   reduce using rule 11 (ExtDecList)


State 21

    8 ExtDef: Specifier FunDec . CompSt

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    LC      shift, and go to state 32
    STRUCT  shift, and go to state 3

    error   [reduce using rule 70 (DefList)]
    INT     reduce using rule 70 (DefList)
    FLOAT   reduce using rule 70 (DefList)
    ID      reduce using rule 70 (DefList)
    MINUS   reduce using rule 70 (DefList)
    NOT     reduce using rule 70 (DefList)
    TYPE    [reduce using rule 70 (DefList)]
    LP      reduce using rule 70 (DefList)
    LC      [reduce using rule 70 (DefList)]
    RC      reduce using rule 70 (DefList)
    STRUCT  [reduce using rule 70 (DefList)]
    RETURN  reduce using rule 70 (DefList)
    IF      reduce using rule 70 (DefList)
    WHILE   reduce using rule 70 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    CompSt           go to state 34
    DefList          go to state 35
    Def              go to state 36


State 22

   21 StructSpecifier: STRUCT OptTag error . DefList RC

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 70 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 36


State 23

   18 StructSpecifier: STRUCT OptTag LC . DefList RC
   20                | STRUCT OptTag LC . DefList error

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error  [reduce using rule 70 (DefList)]
    RC     reduce using rule 70 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 36


State 24

   29 VarDec: ID error .
   38 FunDec: ID error .

    error     reduce using rule 29 (VarDec)
    error     [reduce using rule 38 (FunDec)]
    SEMI      reduce using rule 29 (VarDec)
    COMMA     reduce using rule 29 (VarDec)
    LB        reduce using rule 29 (VarDec)
    $default  reduce using rule 38 (FunDec)


State 25

   34 FunDec: ID LP . VarList RP
   35       | ID LP . RP
   36       | ID LP . VarList error
   37       | ID LP . error RP

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    RP      shift, and go to state 41
    STRUCT  shift, and go to state 3

    Specifier        go to state 42
    StructSpecifier  go to state 8
    VarList          go to state 43
    ParamDec         go to state 44


State 26

    9 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 9 (ExtDef)


State 27

    6 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 6 (ExtDef)


State 28

   13 ExtDecList: VarDec error . ExtDefList
   32 VarDec: VarDec error . INT

    error   shift, and go to state 14
    INT     shift, and go to state 45
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error  [reduce using rule 4 (ExtDefList)]
    SEMI   reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 46
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 29

   12 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 47
    ID     shift, and go to state 48

    ExtDecList  go to state 49
    VarDec      go to state 20


State 30

   28 VarDec: VarDec LB . INT RB
   30       | VarDec LB . error RB
   31       | VarDec LB . INT error

    error  shift, and go to state 50
    INT    shift, and go to state 51


State 31

   17 Specifier: error .
   50 CompSt: error .

    error     reduce using rule 17 (Specifier)
    error     [reduce using rule 50 (CompSt)]
    ID        reduce using rule 17 (Specifier)
    $default  reduce using rule 50 (CompSt)


State 32

   46 CompSt: LC . DefList StmtList RC
   47       | LC . DefList StmtList error
   48       | LC . error RC

    error   shift, and go to state 52
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 70 (DefList)]
    INT     reduce using rule 70 (DefList)
    FLOAT   reduce using rule 70 (DefList)
    ID      reduce using rule 70 (DefList)
    MINUS   reduce using rule 70 (DefList)
    NOT     reduce using rule 70 (DefList)
    TYPE    [reduce using rule 70 (DefList)]
    LP      reduce using rule 70 (DefList)
    LC      reduce using rule 70 (DefList)
    RC      reduce using rule 70 (DefList)
    STRUCT  [reduce using rule 70 (DefList)]
    RETURN  reduce using rule 70 (DefList)
    IF      reduce using rule 70 (DefList)
    WHILE   reduce using rule 70 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 36


State 33

   71 Def: Specifier . DecList SEMI
   72    | Specifier . error SEMI
   73    | Specifier . DecList error

    error  shift, and go to state 54
    ID     shift, and go to state 48

    VarDec   go to state 55
    DecList  go to state 56
    Dec      go to state 57


State 34

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 35

   49 CompSt: DefList . StmtList RC

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    TYPE    shift, and go to state 2
    LP      shift, and go to state 64
    LC      shift, and go to state 32
    STRUCT  shift, and go to state 3
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    error   [reduce using rule 70 (DefList)]
    INT     [reduce using rule 70 (DefList)]
    FLOAT   [reduce using rule 70 (DefList)]
    ID      [reduce using rule 70 (DefList)]
    MINUS   [reduce using rule 70 (DefList)]
    NOT     [reduce using rule 70 (DefList)]
    TYPE    [reduce using rule 70 (DefList)]
    LP      [reduce using rule 70 (DefList)]
    LC      [reduce using rule 70 (DefList)]
    RC      reduce using rule 52 (StmtList)
    RC      [reduce using rule 70 (DefList)]
    STRUCT  [reduce using rule 70 (DefList)]
    RETURN  [reduce using rule 70 (DefList)]
    IF      [reduce using rule 70 (DefList)]
    WHILE   [reduce using rule 70 (DefList)]

    Specifier        go to state 33
    StructSpecifier  go to state 8
    CompSt           go to state 68
    StmtList         go to state 69
    Stmt             go to state 70
    DefList          go to state 35
    Def              go to state 36
    Exp              go to state 71


State 36

   69 DefList: Def . DefList

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 70 (DefList)]
    INT     reduce using rule 70 (DefList)
    FLOAT   reduce using rule 70 (DefList)
    ID      reduce using rule 70 (DefList)
    MINUS   reduce using rule 70 (DefList)
    NOT     reduce using rule 70 (DefList)
    TYPE    [reduce using rule 70 (DefList)]
    LP      reduce using rule 70 (DefList)
    LC      reduce using rule 70 (DefList)
    RC      reduce using rule 70 (DefList)
    STRUCT  [reduce using rule 70 (DefList)]
    RETURN  reduce using rule 70 (DefList)
    IF      reduce using rule 70 (DefList)
    WHILE   reduce using rule 70 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 72
    Def              go to state 36


State 37

   17 Specifier: error .

    $default  reduce using rule 17 (Specifier)


State 38

   21 StructSpecifier: STRUCT OptTag error DefList . RC

    RC  shift, and go to state 73


State 39
